freetype/include/merged.h

  
  typedef struct  FT_Bitmap_Size_
  {
    FT_Short  height;
    FT_Short  width;
    FT_Pos    size;
    FT_Pos    x_ppem;
    FT_Pos    y_ppem;
  } FT_Bitmap_Size;
  typedef struct FT_DriverRec_*  FT_Driver;
  typedef struct FT_FaceRec_*  FT_Face;
  typedef struct FT_SizeRec_*  FT_Size;
  typedef struct FT_GlyphSlotRec_*  FT_GlyphSlot;
  typedef struct FT_CharMapRec_*  FT_CharMap;
  typedef struct FT_Face_InternalRec_*  FT_Face_Internal;
  typedef struct  FT_FaceRec_
  {
    FT_Long           num_faces;
    FT_Long           face_index;
    FT_Long           face_flags;
    FT_Long           style_flags;
    FT_Long           num_glyphs;
    FT_String*        family_name;
    FT_String*        style_name;
    FT_Int            num_fixed_sizes;
    FT_Bitmap_Size*   available_sizes;
    FT_Int            num_charmaps;
    FT_CharMap*       charmaps;
    FT_Generic        generic;
    FT_BBox           bbox;
    FT_UShort         units_per_EM;
    FT_Short          ascender;
    FT_Short          descender;
    FT_Short          height;
    FT_Short          max_advance_width;
    FT_Short          max_advance_height;
    FT_Short          underline_position;
    FT_Short          underline_thickness;
    FT_GlyphSlot      glyph;
    FT_Size           size;
    FT_CharMap        charmap;
    FT_Driver         driver;
    FT_Memory         memory;
    FT_Stream         stream;
    FT_ListRec        sizes_list;
    FT_Generic        autohint;   
    void*             extensions; 
    FT_Face_Internal  internal;
  } FT_FaceRec;
  typedef struct FT_Size_InternalRec_*  FT_Size_Internal;
  typedef struct  FT_Size_Metrics_
  {
    FT_UShort  x_ppem;      
    FT_UShort  y_ppem;      
    FT_Fixed   x_scale;     
    FT_Fixed   y_scale;     
    FT_Pos     ascender;    
    FT_Pos     descender;   
    FT_Pos     height;      
    FT_Pos     max_advance; 
  } FT_Size_Metrics;
  typedef struct  FT_SizeRec_
  {
    FT_Face           face;      
    FT_Generic        generic;   
    FT_Size_Metrics   metrics;   
    FT_Size_Internal  internal;
  } FT_SizeRec;
  FT_EXPORT( FT_Error )
  FT_Load_Glyph( FT_Face   face,
                 FT_UInt   glyph_index,
                 FT_Int32  load_flags );
  FT_EXPORT( FT_Long )
  FT_MulFix( FT_Long  a,
             FT_Long  b );