include_ver_2_beta_2/freetype.h

  
  typedef unsigned short  FT_UShort;
  typedef signed long  FT_Fixed;