include_ver_2_beta_2/ftsystem.h


  typedef struct FT_MemoryRec_*  FT_Memory;
  typedef void* (*FT_Alloc_Func)( FT_Memory  memory,
                                  long       size );
  typedef void  (*FT_Free_Func)( FT_Memory  memory,
                                 void*      block );
  typedef void* (*FT_Realloc_Func)( FT_Memory  memory,
                                    long       cur_size,
                                    long       new_size,
                                    void*      block );
  struct FT_MemoryRec_
  {
    void*            user;
    FT_Alloc_Func    alloc;
    FT_Free_Func     free;
    FT_Realloc_Func  realloc;
  };
  typedef union FT_StreamDesc_
  {
    long  value;
    void* pointer;
  } FT_StreamDesc;
  typedef struct FT_StreamRec_*  FT_Stream;
  typedef  unsigned long (*FT_Stream_IO)( FT_Stream      stream,
                                          unsigned long  offset,
                                          char*          buffer,
                                          unsigned long  count );
  typedef  void (*FT_Stream_Close)( FT_Stream  stream );
  struct FT_StreamRec_
  {
    char*           base;
    unsigned long   size;
    unsigned long   pos;
    FT_StreamDesc   descriptor;
    FT_StreamDesc   pathname;    
    FT_Stream_IO    read;
    FT_Stream_Close close;
    FT_Memory       memory;
    char*           cursor;
    char*           limit;
  };