lib/src/generated_bindings.dart


/// @struct:
/// FT_Size_Metrics
///
/// @description:
/// The size metrics structure gives the metrics of a size object.
///
/// @fields:
/// x_ppem ::
/// The width of the scaled EM square in pixels, hence the term 'ppem'
/// (pixels per EM).  It is also referred to as 'nominal width'.
///
/// y_ppem ::
/// The height of the scaled EM square in pixels, hence the term 'ppem'
/// (pixels per EM).  It is also referred to as 'nominal height'.
///
/// x_scale ::
/// A 16.16 fractional scaling value to convert horizontal metrics from
/// font units to 26.6 fractional pixels.  Only relevant for scalable
/// font formats.
///
/// y_scale ::
/// A 16.16 fractional scaling value to convert vertical metrics from
/// font units to 26.6 fractional pixels.  Only relevant for scalable
/// font formats.
///
/// ascender ::
/// The ascender in 26.6 fractional pixels, rounded up to an integer
/// value.  See @FT_FaceRec for the details.
///
/// descender ::
/// The descender in 26.6 fractional pixels, rounded down to an integer
/// value.  See @FT_FaceRec for the details.
///
/// height ::
/// The height in 26.6 fractional pixels, rounded to an integer value.
/// See @FT_FaceRec for the details.
///
/// max_advance ::
/// The maximum advance width in 26.6 fractional pixels, rounded to an
/// integer value.  See @FT_FaceRec for the details.
///
/// @note:
/// The scaling values, if relevant, are determined first during a size
/// changing operation.  The remaining fields are then set by the driver.
/// For scalable formats, they are usually set to scaled values of the
/// corresponding fields in @FT_FaceRec.  Some values like ascender or
/// descender are rounded for historical reasons; more precise values (for
/// outline fonts) can be derived by scaling the corresponding @FT_FaceRec
/// values manually, with code similar to the following.
///
/// ```
/// scaled_ascender = FT_MulFix( face->ascender,
/// size_metrics->y_scale );
/// ```
///
/// Note that due to glyph hinting and the selected rendering mode these
/// values are usually not exact; consequently, they must be treated as
/// unreliable with an error margin of at least one pixel!
///
/// Indeed, the only way to get the exact metrics is to render _all_
/// glyphs.  As this would be a definite performance hit, it is up to
/// client applications to perform such computations.
///
/// The `FT_Size_Metrics` structure is valid for bitmap fonts also.
///
///
/// **TrueType fonts with native bytecode hinting**
///
/// All applications that handle TrueType fonts with native hinting must
/// be aware that TTFs expect different rounding of vertical font
/// dimensions.  The application has to cater for this, especially if it
/// wants to rely on a TTF's vertical data (for example, to properly align
/// box characters vertically).
///
/// Only the application knows _in advance_ that it is going to use native
/// hinting for TTFs!  FreeType, on the other hand, selects the hinting
/// mode not at the time of creating an @FT_Size object but much later,
/// namely while calling @FT_Load_Glyph.
///
/// Here is some pseudo code that illustrates a possible solution.
///
/// ```
/// font_format = FT_Get_Font_Format( face );
///
/// if ( !strcmp( font_format, "TrueType" ) &&
/// do_native_bytecode_hinting         )
/// {
/// ascender  = ROUND( FT_MulFix( face->ascender,
/// size_metrics->y_scale ) );
/// descender = ROUND( FT_MulFix( face->descender,
/// size_metrics->y_scale ) );
/// }
/// else
/// {
/// ascender  = size_metrics->ascender;
/// descender = size_metrics->descender;
/// }
///
/// height      = size_metrics->height;
/// max_advance = size_metrics->max_advance;
/// ```
final class FT_Size_Metrics_ extends ffi.Struct {
  @FT_UShort()
  external int x_ppem;

  @FT_UShort()
  external int y_ppem;

  @FT_Fixed()
  external int x_scale;

  @FT_Fixed()
  external int y_scale;

  @FT_Pos()
  external int ascender;

  @FT_Pos()
  external int descender;

  @FT_Pos()
  external int height;

  @FT_Pos()
  external int max_advance;
}

/// @type:
/// FT_Size_Internal
///
/// @description:
/// An opaque handle to an `FT_Size_InternalRec` structure, used to model
/// private data of a given @FT_Size object.
typedef FT_Size_Internal = ffi.Pointer<FT_Size_InternalRec_>;

final class FT_Size_InternalRec_ extends ffi.Opaque {}

/// @type:
/// FT_Driver
///
/// @description:
/// A handle to a given FreeType font driver object.  A font driver is a
/// module capable of creating faces from font files.
typedef FT_Driver = ffi.Pointer<FT_DriverRec_>;

/// @type:
/// FT_Memory
///
/// @description:
/// A handle to a given memory manager object, defined with an
/// @FT_MemoryRec structure.
typedef FT_Memory = ffi.Pointer<FT_MemoryRec_>;

/// @struct:
/// FT_MemoryRec
///
/// @description:
/// A structure used to describe a given memory manager to FreeType~2.
///
/// @fields:
/// user ::
/// A generic typeless pointer for user data.
///
/// alloc ::
/// A pointer type to an allocation function.
///
/// free ::
/// A pointer type to an memory freeing function.
///
/// realloc ::
/// A pointer type to a reallocation function.
final class FT_MemoryRec_ extends ffi.Struct {
  external ffi.Pointer<ffi.Void> user;

  external FT_Alloc_Func alloc;

  external FT_Free_Func free;

  external FT_Realloc_Func realloc;
}

/// @functype:
/// FT_Alloc_Func
///
/// @description:
/// A function used to allocate `size` bytes from `memory`.
///
/// @input:
/// memory ::
/// A handle to the source memory manager.
///
/// size ::
/// The size in bytes to allocate.
///
/// @return:
/// Address of new memory block.  0~in case of failure.
typedef FT_Alloc_Func = ffi.Pointer<ffi.NativeFunction<FT_Alloc_FuncFunction>>;
typedef FT_Alloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory1 memory, ffi.Long size);
typedef DartFT_Alloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory1 memory, int size);

/// @type:
/// FT_Memory
///
/// @description:
/// A handle to a given memory manager object, defined with an
/// @FT_MemoryRec structure.
typedef FT_Memory1 = ffi.Pointer<FT_MemoryRec_>;

/// @functype:
/// FT_Free_Func
///
/// @description:
/// A function used to release a given block of memory.
///
/// @input:
/// memory ::
/// A handle to the source memory manager.
///
/// block ::
/// The address of the target memory block.
typedef FT_Free_Func = ffi.Pointer<ffi.NativeFunction<FT_Free_FuncFunction>>;
typedef FT_Free_FuncFunction = ffi.Void Function(
    FT_Memory1 memory, ffi.Pointer<ffi.Void> block);
typedef DartFT_Free_FuncFunction = void Function(
    FT_Memory1 memory, ffi.Pointer<ffi.Void> block);

/// @functype:
/// FT_Realloc_Func
///
/// @description:
/// A function used to re-allocate a given block of memory.
///
/// @input:
/// memory ::
/// A handle to the source memory manager.
///
/// cur_size ::
/// The block's current size in bytes.
///
/// new_size ::
/// The block's requested new size.
///
/// block ::
/// The block's current address.
///
/// @return:
/// New block address.  0~in case of memory shortage.
///
/// @note:
/// In case of error, the old block must still be available.
typedef FT_Realloc_Func
    = ffi.Pointer<ffi.NativeFunction<FT_Realloc_FuncFunction>>;
typedef FT_Realloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory1 memory,
    ffi.Long cur_size,
    ffi.Long new_size,
    ffi.Pointer<ffi.Void> block);
typedef DartFT_Realloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory1 memory, int cur_size, int new_size, ffi.Pointer<ffi.Void> block);

/// @type:
/// FT_Stream
///
/// @description:
/// A handle to an input stream.
///
/// @also:
/// See @FT_StreamRec for the publicly accessible fields of a given stream
/// object.
typedef FT_Stream = ffi.Pointer<FT_StreamRec_>;

/// @struct:
/// FT_StreamRec
///
/// @description:
/// A structure used to describe an input stream.
///
/// @input:
/// base ::
/// For memory-based streams, this is the address of the first stream
/// byte in memory.  This field should always be set to `NULL` for
/// disk-based streams.
///
/// size ::
/// The stream size in bytes.
///
/// In case of compressed streams where the size is unknown before
/// actually doing the decompression, the value is set to 0x7FFFFFFF.
/// (Note that this size value can occur for normal streams also; it is
/// thus just a hint.)
///
/// pos ::
/// The current position within the stream.
///
/// descriptor ::
/// This field is a union that can hold an integer or a pointer.  It is
/// used by stream implementations to store file descriptors or `FILE*`
/// pointers.
///
/// pathname ::
/// This field is completely ignored by FreeType.  However, it is often
/// useful during debugging to use it to store the stream's filename
/// (where available).
///
/// read ::
/// The stream's input function.
///
/// close ::
/// The stream's close function.
///
/// memory ::
/// The memory manager to use to preload frames.  This is set internally
/// by FreeType and shouldn't be touched by stream implementations.
///
/// cursor ::
/// This field is set and used internally by FreeType when parsing
/// frames.  In particular, the `FT_GET_XXX` macros use this instead of
/// the `pos` field.
///
/// limit ::
/// This field is set and used internally by FreeType when parsing
/// frames.
final class FT_StreamRec_ extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> base;

  @ffi.UnsignedLong()
  external int size;

  @ffi.UnsignedLong()
  external int pos;

  external FT_StreamDesc descriptor;

  external FT_StreamDesc pathname;

  external FT_Stream_IoFunc read;

  external FT_Stream_CloseFunc close;

  external FT_Memory memory;

  external ffi.Pointer<ffi.UnsignedChar> cursor;

  external ffi.Pointer<ffi.UnsignedChar> limit;
}

/// @struct:
/// FT_StreamDesc
///
/// @description:
/// A union type used to store either a long or a pointer.  This is used
/// to store a file descriptor or a `FILE*` in an input stream.
typedef FT_StreamDesc = FT_StreamDesc_;

/// @struct:
/// FT_StreamDesc
///
/// @description:
/// A union type used to store either a long or a pointer.  This is used
/// to store a file descriptor or a `FILE*` in an input stream.
final class FT_StreamDesc_ extends ffi.Union {
  @ffi.Long()
  external int value;

  external ffi.Pointer<ffi.Void> pointer;
}

/// @functype:
/// FT_Stream_IoFunc
///
/// @description:
/// A function used to seek and read data from a given input stream.
///
/// @input:
/// stream ::
/// A handle to the source stream.
///
/// offset ::
/// The offset from the start of the stream to seek to.
///
/// buffer ::
/// The address of the read buffer.
///
/// count ::
/// The number of bytes to read from the stream.
///
/// @return:
/// If count >~0, return the number of bytes effectively read by the
/// stream (after seeking to `offset`).  If count ==~0, return the status
/// of the seek operation (non-zero indicates an error).
typedef FT_Stream_IoFunc
    = ffi.Pointer<ffi.NativeFunction<FT_Stream_IoFuncFunction>>;
typedef FT_Stream_IoFuncFunction = ffi.UnsignedLong Function(
    FT_Stream1 stream,
    ffi.UnsignedLong offset,
    ffi.Pointer<ffi.UnsignedChar> buffer,
    ffi.UnsignedLong count);
typedef DartFT_Stream_IoFuncFunction = int Function(FT_Stream1 stream,
    int offset, ffi.Pointer<ffi.UnsignedChar> buffer, int count);

/// @type:
/// FT_Stream
///
/// @description:
/// A handle to an input stream.
///
/// @also:
/// See @FT_StreamRec for the publicly accessible fields of a given stream
/// object.
typedef FT_Stream1 = ffi.Pointer<FT_StreamRec_>;

/// @functype:
/// FT_Stream_CloseFunc
///
/// @description:
/// A function used to close a given input stream.
///
/// @input:
/// stream ::
/// A handle to the target stream.
typedef FT_Stream_CloseFunc
    = ffi.Pointer<ffi.NativeFunction<FT_Stream_CloseFuncFunction>>;
typedef FT_Stream_CloseFuncFunction = ffi.Void Function(FT_Stream1 stream);
typedef DartFT_Stream_CloseFuncFunction = void Function(FT_Stream1 stream);
